* tuned up stat scaling
* hammers now only aoe when atk cooldown is refreshed enough
* hammers do double damage if attacking only 1 target at refreshed cooldown. They should be good as main weapon now
* reduced max default player lvl to 60
* tweaked xp formula
* reduced boss xp 

3.4.0

* removed mythic rarity, epics are now purple, rares are now blue. Higher rarities are now much better than lower ones
* removed alchemy station, professions are a failed system. 
* higher rarities now have more secondary stats
* made mobs stronger at higher levels. 
* removed item rarity configs, now they are configurable as datapacks (still unsure if they should be configs or datapacks but for now they can be datapacks..)
* removed wands
* fixed item dupe with bags with right clicking on offhand
* removed infusion stats and the 6 items associated with them. I feel the system is kinda lame. It was basically just a power upgrade
* reduced currency drops as a result
* reduced player base stats (clear base stats config to notice)
* armor is no longer given for free as a base stat. This means mages should rely less on it. No more free 20% armor!
* reduced hunger default cost a bit (config)
* made jewerly rarer
* made wisdom the mage defense stat while int is the offense stat
* increased ore spawns
I feel this is a problem caused by addition of skill, spell and talent points, player gets increasingly stronger so game gets easier the higher level you are..
You can also get stronger affixes, sets etc at high lvls. Gonna start with a 50% strength multiplier to lvl 100 mobs.
* added more dev commands. 
If you're in a dungeon and the room looks wrong (like entrance being blocked) or the there's a whole chunk missing,
 Do: /slash dev log dungeon_room when you're inside it.
And send me the log. The command should tell me what room is faulty.
* nerfed stone of corruption, now increases gear lvl by 2 and has 20% more break chance
* overlays shouldnt render in spectator mode anymore